--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -3,9 +3,10 @@ name: Codecov
 on: pull_request
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Generate coverage report
-      run: yarn test --coverage
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Generate coverage report
+        run: yarn test --coverage
