chore: add Codecov workflow

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -3,10 +3,17 @@ name: Codecov
 on: pull_request
 
 jobs:
-  name: Code Coverage Check
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Generate coverage report
-      run: yarn test --coverage
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: yarn
+
+      - name: Generate coverage report
+        run: yarn test --coverage
+
+      - name: Send coverage report to Codecov
+        uses: codecov/codecov-action@v1
