test: add snapshot test for Alphabet

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test-coverage": "yarn test --coverage --watchAll=false",
     "eject": "react-scripts eject",
     "cosmos": "cosmos"
   },
@@ -39,6 +40,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*"
     ]
   },
   "devDependencies": {
