chore: use useSound hook

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.13.1",
     "react-scripts": "4.0.1",
     "styled-components": "^5.1.0",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.2",
+    "use-sound": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
