--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "@types/styled-components": "^5.1.24",
+    "classnames": "^2.3.1",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,7 +27,8 @@
     "test": "react-scripts test",
     "test-coverage": "yarn test --coverage --watchAll=false",
     "eject": "react-scripts eject",
-    "cosmos": "cosmos"
+    "cosmos": "cosmos",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": "react-app"
