chore: add typescript override for react-scripts

--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "typescript": "^5.3.2",
     "use-sound": "^4.0.1"
   },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "^5"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
