--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "classnames": "^2.5.1",
-    "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
     "styled-components": "^6.1.12",
     "typescript": "^5.5.4",
     "use-sound": "^4.0.3"
@@ -27,8 +26,9 @@
     }
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "test": "react-scripts test",
     "test-coverage": "yarn test --coverage --watchAll=false",
     "eject": "react-scripts eject",
@@ -66,7 +66,8 @@
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.1",
     "prettier": "3.3.3",
-    "react-cosmos": "^6.1.1",
-    "style-loader": "^4.0.0"
+    "sass": "^1.77.8",
+    "style-loader": "^4.0.0",
+    "vite": "^5.3.4"
   }
 }
